--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -1,2 +1,3 @@
 add_executable(hex_check ./hex_check/hex_check.c)
 add_executable(caesar_cipher ./Caesar-cipher/caesar_cipher.c)
+add_executable(char_manipulation ./char_manipulation/char_manipulation.c)
