--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_executable(hex_check ./hex_check/hex_check.c)
-add_executable(caesar_cipher ./Caesar-cipher/caesar_cipher.c)
+add_executable(caesar_cipher ./caesar_cipher/caesar_cipher.cpp)
 add_executable(char_manipulation ./char_manipulation/char_manipulation.c)
 
 add_library(is_base ./base_check/is_base.c)
